--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,13 @@
 .navbar {
     position: fixed;
     width: 100%;
-    padding: 15px 0;
-    /* background: linear-gradient(to right,#54b5ff, #3935bd); */
+    padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
+    transition: all 0.3s ease;
+}
+.navbar.sticky{
+    padding: 15px 0;
+    background: #54b5ff;
 }
 .navbar .max-width{
     display: flex;
@@ -31,6 +35,10 @@
 .navbar .logo a span{
     color: #54b5ff;
 }
+.navbar.sticky .logo a span{
+    color: white;
+    transition: all 0.3s ease;
+}
 .navbar .menu ul{
     list-style: none;
     display: inline-block;
@@ -40,16 +48,26 @@
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
-    transition: color 0.3s ease
+    transition: color 0.3s ease;
 }
 .navbar .menu ul a:hover {
     color: #54b5ff;
 }
-
+.navbar.sticky .menu ul a{
+    color: white;
+    transition: all 0.3s ease;
+}
+/* menu button styling */
+.menu-btn {
+    color: #54b5ff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
+}
 /* Home Page Styling */
 .home {
     display: flex;
-    background: url('images/propic.jpg') no-repeat center;
+    background: url('images/propic-removebg-preview.png') no-repeat right;
     height: 100vh;
     color: black;
     min-height: 500px;
