--- a/styles.css
+++ b/styles.css
@@ -92,16 +92,46 @@
     color: #54b5ff;
     font-weight: 500;
 }
+.home .home-content a{
+    display: inline-block;
+    background: #54b5ff;
+    color: white;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #54b5ff;
+    transition: all 0.3s ease;
+}
+.home .home-content a:hover{
+    color: black;
+    background: none;
+}
+
+/* about styling */
+
 
 /* responsive media query start */
-@media (max-width: 947px) {
+@media (max-width: 1104px) {
+    .home .max-width{
+        margin-left: 0px;
+    }
+}
+
+@media (max-width: 991px) {
     .max-width{
         padding: 0 50px;
     }
+}
+
+@media (max-width: 947px) {
     .menu-btn{
         display: block;
         z-index: 999;
     }
+    .menu-btn i.active::before{
+        content: '\f00d';
+    } 
     .navbar .menu{
         position: fixed;
         height: 100vh;
@@ -124,44 +154,37 @@
         margin: 20px 0;
         font-size: 25px;
     }
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-.heading {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@media (max-width: 690) {
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    .home .home-content a{
+        font-size: 20px;
+        padding: 8px 25px;
+    }
 }
-.propic {
-    align-items: center;
-}
-img{
-    height: 20rem;
-    border-radius: 3rem;
-}
-.about {
-    text-align: center;
-    border-style: solid;
-    border-top-left-radius: 3rem;
-    border-bottom-right-radius: 3rem;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-    padding: 2rem;
-    background-color: #54b5ff;
-    background: linear-gradient(to right,#54b5ff, #3935bd);
-    color: white;
-    margin-left: 0;
-    margin-right: 0;
-    padding: 5rem;
-    font-weight: 300;
+@media (max-width: 500px) {
+    .home .home-content .text-2{
+        font-size: 50px;
+    }
+    .home .home-content .text-3{
+        font-size: 27px;
+    }
 }
