still busy on the about me section

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 .navbar {
     position: fixed;
     width: 100%;
+    z-index: 999;
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
@@ -109,6 +110,65 @@
 }
 
 /* about styling */
+section{
+    padding: 100px 0;
+}
+.about {
+    font-family: 'Poppins', sans-serif;
+}
+.about .title{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+
+}
+.about .title::before{
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #54b5ff;
+    transform: translateX(-50%);
+}
+.about .title::after{
+    content: 'Who I Am';
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: #54b5ff;
+    padding: 5px;
+    background: white;
+    transform: translateX(-50%);
+}
+.about .about-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.about .about-content .column-left{
+    width: 45%
+}
+.about .about-content .column-left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 50px;
+} 
+.about .about-content .column-right{
+    width: 55%;
+}
+
+
+
+
+
 
 
 /* responsive media query start */
