--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,33 @@ section{
 .about .about-content .column-right{
     width: 55%;
 }
+.about .about-content .column-right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.about .about-content .column-right .text span{
+    color: #54b5ff;
+}
+.about .about-content .column-right p{
+    text-align: justify;
+}
+.about .about-content .column-right a{
+    display: inline-block;
+    background: #54b5ff;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #54b5ff;
+    transition: all 0.3s ease;
+}
+.about .about-content .column-right a:hover{
+    color: #54b5ff;
+    background: none;
+}
 
 
 
@@ -172,11 +199,18 @@ section{
 
 
 /* responsive media query start */
-@media (max-width: 1104px) {
+@media (max-width: 1300px) {
     .home .max-width{
         margin-left: 0px;
     }
 }
+@media (max-width: 1104px) {
+    .about .about-content .column-left img{
+        height: 350px;
+        width: 350px;
+    } 
+}
+
 
 @media (max-width: 991px) {
     .max-width{
@@ -224,6 +258,19 @@ section{
         font-size: 23px;
         padding: 10px 30px;
     }
+    .max-width{
+        max-width: 800px;
+    }
+    .about .about-content .column-left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .column-right{
+        width: 100%;
+        flex: 100%;
+    }
+
 }
 @media (max-width: 690) {
     .max-width{
