skills section complete with some errors

--- a/styles.css
+++ b/styles.css
@@ -108,12 +108,50 @@
     color: black;
     background: none;
 }
+/* Section general code */
+section{
+    padding: 100px 0;
+}
+.max-width{
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
+}
+section .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+section .title::before{
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #54b5ff;
+    transform: translateX(-50%);
+}
+section .title::after{
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: #54b5ff;
+    padding: 5px;
+    background: white;
+    transform: translateX(-50%)
+}
 
 /* about styling */
 section{
     padding: 100px 0;
 }
-.about {
+.about, .skills{
     font-family: 'Poppins', sans-serif;
 }
 .about .title{
@@ -146,7 +184,7 @@ section{
     background: white;
     transform: translateX(-50%);
 }
-.about .about-content{
+.about .about-content, .skills .skills-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -192,9 +230,67 @@ section{
     background: none;
 }
 
+/* Skills styling */
+.skills .title::after{
+    content: 'What I Know';
+}
 
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
+.skills .skills-content .column-left .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.skills .skills-content .column-left p{
+    text-align: center;
+    margin-bottom: 35px;
+}
 
-
+.skills .skills-content .column-right .bars{
+    margin-bottom: 15px;
+}
+.skills .skills-content .column-right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+.skills .skills-content .column-right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+.skills .skills-content .column-right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgray;
+    position: relative;
+}
+.skills .skills-content .column-right .line::before{
+    content: '';
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: #54b5ff;
+}
+.skills-content .column-right .html::before{
+    width: 70%;
+}
+.skills-content .column-right .css::before{
+    width: 65%;
+}
+.skills-content .column-right .js::before{
+    width: 40%;
+}
+.skills-content .column-right .excel::before{
+    width: 80%;
+}
+.skills-content .column-right .power::before{
+    width: 90%;
+}
 
 
 
