--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ section .title::after{
 section{
     padding: 100px 0;
 }
-.about, .skills{
+.about, .skills, .projects{
     font-family: 'Poppins', sans-serif;
 }
 .about .title{
@@ -291,45 +291,52 @@ section{
 .skills-content .column-right .power::before{
     width: 90%;
 }
-/* teams section styling */
-.teams .title::after{
-    content: "who with me";
+/* projects section styling */
+.projects .title::before{
+    background: white;
 }
-.teams .carousel .card{
-    background: #222;
+.projects .title::after{
+    content: "My Current Work";
+}
+.projects{
+    color: black;
+    background: white;
+}
+.projects .carousel .card{
+    background: white;
     border-radius: 6px;
     padding: 25px 35px;
     text-align: center;
     overflow: hidden;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover{
-    background: crimson;
+.projects .carousel .card:hover{
+    background: #54b5ff;
 }
-.teams .carousel .card .box{
+.projects .carousel .card .box{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover .box{
+.projects .carousel .card:hover .box{
     transform: scale(1.05);
 }
-.teams .carousel .card .text{
+.projects .carousel .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
-.teams .carousel .card img{
+.projects .carousel .card img{
     height: 150px;
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid crimson;
+    border: 5px solid #54b5ff;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover img{
+.projects .carousel .card:hover img{
     border-color: #fff;
 }
 .owl-dots{
@@ -342,7 +349,7 @@ section{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid crimson!important;
+    border: 2px solid #54b5ff!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -351,7 +358,7 @@ section{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: crimson!important;
+    background: #54b5ff!important;
 }
 
 
