--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ section{
     background: white;
     transform: translateX(-50%);
 }
-.about .about-content, .skills .skills-content{
+.about .about-content, .skills .skills-content, .contact .contact-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -362,7 +362,9 @@ section{
 .owl-dot:hover{
     background: #54b5ff!important;
 }
+
 /* contact section styling */
+
 .contact .title::after{
     content: "get in touch";
 }
@@ -390,7 +392,7 @@ section{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: #54b5ff;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -449,12 +451,12 @@ section{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: crimson;
-  border: 2px solid crimson;
+  background: #54b5ff;
+  border: 2px solid rgb(105, 105, 105);
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: crimson;
+  color: #54b5ff;
   background: none;
 }
 
